// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`T-21: 组件快照测试 > PetBubble 渲染快照 1`] = `
<div
  aria-live="polite"
  class="absolute left-1/2 -translate-x-1/2 transition-all duration-300 ease-out bottom-full mb-2 opacity-100"
  role="status"
  style="pointer-events: none;"
>
  <div
    class="spiritpal-pet-voice relative max-w-[220px] whitespace-pre-wrap break-words rounded-2xl border border-ink/10 bg-surface px-3 py-2 text-center text-sm text-ink shadow-soft"
  >
    测试消息
    <div
      class="absolute left-1/2 -bottom-1 h-0 w-0 -translate-x-1/2 border-l-8 border-r-8 border-t-8 border-l-transparent border-r-transparent border-t-surface"
    />
  </div>
</div>
`;

exports[`T-21: 组件快照测试 > PetBubble 空消息快照 1`] = `
<div
  aria-live="polite"
  class="absolute left-1/2 -translate-x-1/2 transition-all duration-300 ease-out bottom-full mb-2 opacity-100"
  role="status"
  style="pointer-events: none;"
>
  <div
    class="spiritpal-pet-voice relative max-w-[220px] whitespace-pre-wrap break-words rounded-2xl border border-ink/10 bg-surface px-3 py-2 text-center text-sm text-ink shadow-soft"
  >
    <div
      class="absolute left-1/2 -bottom-1 h-0 w-0 -translate-x-1/2 border-l-8 border-r-8 border-t-8 border-l-transparent border-r-transparent border-t-surface"
    />
  </div>
</div>
`;
